修改： 主题颜色

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,7 @@ body,
   height: 100%;
 }
 body {
-  background: #eee;
+  background: #f8f8fa;
   font: 14px -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-text-size-adjust: 100%;
 }
@@ -174,7 +174,7 @@ body {
   -ms-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   z-index: 1;
-  background: #eee;
+  background: #f8f8fa;
 }
 .mobile-nav-on #wrap {
   left: 280px;
@@ -194,7 +194,7 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: #999;
+  color: #212b42;
   margin-bottom: 1em;
   margin-left: 5px;
   line-height: 1em;
@@ -232,7 +232,7 @@ body {
 .article-entry h6,
 .widget h6 {
   font-size: 1em;
-  color: #999;
+  color: #212b42;
 }
 .article-entry hr,
 .widget hr {
@@ -478,7 +478,7 @@ body {
 .search-form-input {
   border: none;
   background: none;
-  color: #555;
+  color: #071d3c;
   width: 100%;
   font: 13px -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   outline: none;
@@ -539,7 +539,7 @@ body {
   text-decoration: none;
   font-size: 2em;
   font-weight: bold;
-  color: #555;
+  color: #071d3c;
   line-height: 1.1em;
   -webkit-transition: color 0.2s;
   -moz-transition: color 0.2s;
@@ -547,10 +547,10 @@ body {
   transition: color 0.2s;
 }
 a.article-title:hover {
-  color: #258fb8;
+  color: #0094ff;
 }
 .article-entry {
-  color: #555;
+  color: #071d3c;
   padding: 0 20px;
 }
 .article-entry:before,
@@ -584,7 +584,7 @@ a.article-title:hover {
   margin: 1.1em 0;
 }
 .article-entry a {
-  color: #258fb8;
+  color: #0094ff;
   text-decoration: none;
 }
 .article-entry a:hover {
@@ -649,7 +649,7 @@ a.article-title:hover {
   margin-left: 1em;
 }
 .article-entry .caption {
-  color: #999;
+  color: #212b42;
   display: block;
   font-size: 0.9em;
   margin-top: 0.5em;
@@ -677,16 +677,16 @@ a.article-title:hover {
   line-height: 1em;
   padding: 6px 15px;
   border-radius: 15px;
-  background: #eee;
-  color: #999;
+  background: #f8f8fa;
+  color: #212b42;
   text-shadow: 0 1px #fff;
   text-decoration: none;
 }
 .article-more-link a:hover {
-  background: #258fb8;
+  background: #0094ff;
   color: #fff;
   text-decoration: none;
-  text-shadow: 0 1px #1e7293;
+  text-shadow: 0 1px #0076cc;
 }
 .article-footer {
   font-size: 0.85em;
@@ -704,11 +704,11 @@ a.article-title:hover {
   clear: both;
 }
 .article-footer a {
-  color: #999;
+  color: #212b42;
   text-decoration: none;
 }
 .article-footer a:hover {
-  color: #555;
+  color: #071d3c;
 }
 .article-tag-list-item {
   float: left;
@@ -768,7 +768,7 @@ a.article-title:hover {
 .article-nav-link-wrap {
   text-decoration: none;
   text-shadow: 0 1px #fff;
-  color: #999;
+  color: #212b42;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -777,7 +777,7 @@ a.article-title:hover {
   display: block;
 }
 .article-nav-link-wrap:hover {
-  color: #555;
+  color: #071d3c;
 }
 @media screen and (min-width: 768px) {
   .article-nav-link-wrap {
@@ -836,7 +836,7 @@ a.article-title:hover {
   box-sizing: border-box;
   font: 14px -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   padding: 0 15px;
-  color: #555;
+  color: #071d3c;
   outline: none;
   border: 1px solid #ddd;
   border-radius: 3px 3px 0 0;
@@ -844,7 +844,7 @@ a.article-title:hover {
   line-height: 36px;
 }
 .article-share-links {
-  background: #eee;
+  background: #f8f8fa;
 }
 .article-share-links:before,
 .article-share-links:after {
@@ -949,7 +949,7 @@ a.article-title:hover {
   margin: 50px 0;
 }
 #comments a {
-  color: #258fb8;
+  color: #0094ff;
 }
 .archives-wrap {
   margin: 50px 0;
@@ -997,7 +997,7 @@ a.article-title:hover {
 .archive-article-title {
   text-decoration: none;
   font-weight: bold;
-  color: #555;
+  color: #071d3c;
   -webkit-transition: color 0.2s;
   -moz-transition: color 0.2s;
   -ms-transition: color 0.2s;
@@ -1005,13 +1005,13 @@ a.article-title:hover {
   line-height: 1.6em;
 }
 .archive-article-title:hover {
-  color: #258fb8;
+  color: #0094ff;
 }
 .archive-article-footer {
   margin-top: 1em;
 }
 .archive-article-date {
-  color: #999;
+  color: #212b42;
   text-decoration: none;
   font-size: 0.85em;
   line-height: 1em;
@@ -1026,7 +1026,7 @@ a.article-title:hover {
   border: 1px solid #ddd;
   border-radius: 3px;
   text-align: center;
-  color: #999;
+  color: #212b42;
   overflow: hidden;
 }
 #page-nav:before,
@@ -1044,11 +1044,11 @@ a.article-title:hover {
   height: 2ex;
 }
 #page-nav a {
-  color: #999;
+  color: #212b42;
   text-decoration: none;
 }
 #page-nav a:hover {
-  background: #999;
+  background: #212b42;
   color: #fff;
 }
 #page-nav .prev {
@@ -1066,7 +1066,7 @@ a.article-title:hover {
   }
 }
 #page-nav .current {
-  color: #555;
+  color: #071d3c;
   font-weight: bold;
 }
 #page-nav .space {
@@ -1077,10 +1077,10 @@ a.article-title:hover {
   padding: 50px 0;
   display: none;
   border-top: 1px solid #ddd;
-  color: #999;
+  color: #212b42;
 }
 #footer a {
-  color: #258fb8;
+  color: #0094ff;
   text-decoration: none;
 }
 #footer a:hover {
@@ -1112,7 +1112,7 @@ a.article-title:hover {
   font-family: "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace;
 }
 .article-entry code {
-  background: #eee;
+  background: #f8f8fa;
   text-shadow: 0 1px #fff;
   padding: 0 0.3em;
 }
@@ -1201,7 +1201,7 @@ a.article-title:hover {
   margin-left: 20px;
 }
 .article-entry .gist .gist-file .gist-meta a {
-  color: #258fb8;
+  color: #0094ff;
   font-weight: normal;
 }
 .article-entry .gist .gist-file .gist-meta a:hover {
@@ -1270,14 +1270,17 @@ pre .javascript .function {
     left: 0;
     width: 280px;
     height: 100%;
-    background: #191919;
+    background: -webkit-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
+    background: -moz-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
+    background: -ms-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
+    background: linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
     border-right: 1px solid #fff;
   }
 }
 @media screen and (max-width: 479px) {
   .mobile-nav-link {
     display: block;
-    color: #999;
+    color: #212b42;
     text-decoration: none;
     padding: 15px 20px;
     font-weight: bold;
@@ -1298,17 +1301,20 @@ pre .javascript .function {
   margin: 50px 0;
 }
 .widget {
-  color: #777;
+  color: #fff;
   text-shadow: 0 1px #fff;
-  background: #ddd;
-  -webkit-box-shadow: 0 -1px 4px #ccc inset;
-  box-shadow: 0 -1px 4px #ccc inset;
-  border: 1px solid #ccc;
+  background: -webkit-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
+  background: -moz-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
+  background: -ms-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
+  background: linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
+  -webkit-box-shadow: 0 -1px 4px #f0f0f0 inset;
+  box-shadow: 0 -1px 4px #f0f0f0 inset;
+  border: 1px solid #f0f0f0;
   padding: 15px;
   border-radius: 3px;
 }
 .widget a {
-  color: #258fb8;
+  color: #0094ff;
   text-decoration: none;
 }
 .widget a:hover {
@@ -1354,7 +1360,7 @@ pre .javascript .function {
 .tag-list-count,
 .archive-list-count {
   padding-left: 5px;
-  color: #999;
+  color: #212b42;
   font-size: 0.85em;
 }
 .category-list-count:before,
