--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -3,16 +3,16 @@ support-for-ie = false
 vendor-prefixes = webkit moz ms official
 
 // Colors
-color-default = #555
-color-grey = #999
+color-default = #071D3C
+color-grey = #212B42
 color-border = #ddd
-color-link = #258fb8
-color-background = #eee
-color-sidebar-text = #777
-color-widget-background = #ddd
-color-widget-border = #ccc
+color-link = #0094ff
+color-background = #f8f8fa
+color-sidebar-text = #fff
+color-widget-background = linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1000) 100%)
+color-widget-border = #f0f0f0
 color-footer-background = #0094ff
-color-mobile-nav-background = #191919
+color-mobile-nav-background = linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1000) 100%)
 color-twitter = #00aced
 color-facebook = #3b5998
 color-pinterest = #cb2027
