--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -11,7 +11,7 @@ color-background = #f8f8fa
 color-sidebar-text = #fff
 color-widget-background = linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1000) 100%)
 color-widget-border = #f0f0f0
-color-footer-background = #0094ff
+color-footer-background = #051e3b
 color-mobile-nav-background = linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1000) 100%)
 color-twitter = #00aced
 color-facebook = #3b5998
