--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1073,7 +1073,7 @@ a.article-title:hover {
   color: #ddd;
 }
 #footer {
-  background: #0094ff;
+  background: #051e3b;
   padding: 50px 0;
   display: none;
   border-top: 1px solid #ddd;
