--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,10 +174,12 @@ body {
   -ms-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   z-index: 1;
-  background: #f8f8fa;
 }
 .mobile-nav-on #wrap {
   left: 280px;
+}
+#wrap >.outer_box {
+  background: #f8f8fa;
 }
 @media screen and (min-width: 768px) {
   #main {
@@ -343,11 +345,11 @@ body {
   overflow: hidden;
 }
 #banner {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 300px;
   background: url("images/banner.jpg") center #000;
   background-size: cover;
   z-index: -1;
