--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -24,11 +24,11 @@
   overflow: hidden
 
 #banner
-  position: absolute
+  position: fixed
   top: 0
   left: 0
   width: 100%
-  height: 100%
+  height: 300px
   background: url(banner-url) center #000
   background-size: cover
   z-index: -1
