--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -62,9 +62,10 @@ body
   left: 0
   transition: 0.2s ease-out
   z-index: 1
-  background: color-background
   .mobile-nav-on &
     left: mobile-nav-width
+  >.outer_box
+    background: color-background
 
 if sidebar and sidebar isnt bottom
   #main
