--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,8 +128,7 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 .outer {
-  max-width: 1220px;
-  margin: 0 auto;
+  margin: 0 0 0 360px;
   padding: 0 20px;
 }
 .outer:before,
@@ -174,20 +173,10 @@ body {
   -ms-transition: 0.2s ease-out;
   transition: 0.2s ease-out;
   z-index: 1;
+  background: #f8f8fa;
 }
 .mobile-nav-on #wrap {
   left: 280px;
-}
-#wrap >.outer_box {
-  background: #f8f8fa;
-}
-@media screen and (min-width: 768px) {
-  #main {
-    display: inline;
-    float: left;
-    width: 73.33333333333333%;
-    margin: 0 0.833333333333333%;
-  }
 }
 .article-date,
 .article-category-link,
@@ -350,7 +339,7 @@ body {
   left: 0;
   width: 100%;
   height: 300px;
-  background: url("images/banner.jpg") center #000;
+  background: url("images/banner.jpg") center;
   background-size: cover;
   z-index: -1;
 }
@@ -1272,10 +1261,7 @@ pre .javascript .function {
     left: 0;
     width: 280px;
     height: 100%;
-    background: -webkit-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
-    background: -moz-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
-    background: -ms-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
-    background: linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
+    background: #fff;
     border-right: 1px solid #fff;
   }
 }
@@ -1291,27 +1277,79 @@ pre .javascript .function {
     color: #fff;
   }
 }
-@media screen and (min-width: 768px) {
-  #sidebar {
-    display: inline;
-    float: left;
-    width: 23.333333333333332%;
-    margin: 0 0.833333333333333%;
-  }
+#sidebar {
+  width: 360px;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 20px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  overflow-y: auto;
+  background-color: #fff;
 }
 .widget-wrap {
   margin: 50px 0;
 }
+#user {
+  margin: 50px 0;
+}
+#user .face {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+#user .face .face_img {
+  width: 100px;
+  height: 100px;
+  background: url("images/face.jpg") center;
+  background-size: cover;
+  border-radius: 50%;
+}
+#user .name {
+  padding: 20px 0;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 700;
+}
+#user .menu-link {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+#user .menu-link .menu-link-item {
+  padding: 0 20px;
+  color: #0094ff;
+  text-decoration: none;
+}
+#user .menu-link .menu-link-item:hover {
+  text-decoration: underline;
+}
 .widget {
   color: #fff;
   text-shadow: 0 1px #fff;
-  background: -webkit-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
-  background: -moz-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
-  background: -ms-linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
-  background: linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1) 100%);
-  -webkit-box-shadow: 0 -1px 4px #f0f0f0 inset;
-  box-shadow: 0 -1px 4px #f0f0f0 inset;
-  border: 1px solid #f0f0f0;
+  background: #fff;
+  -webkit-box-shadow: 0 -1px 4px #fff inset;
+  box-shadow: 0 -1px 4px #fff inset;
+  border: 1px solid #fff;
   padding: 15px;
   border-radius: 3px;
 }
