--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -28,8 +28,8 @@
   top: 0
   left: 0
   width: 100%
-  height: 300px
-  background: url(banner-url) center #000
+  height: banner-height
+  background: url(banner-url) center
   background-size: cover
   z-index: -1
 
