--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -9,14 +9,16 @@ color-border = #ddd
 color-link = #0094ff
 color-background = #f8f8fa
 color-sidebar-text = #fff
-color-widget-background = linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1000) 100%)
-color-widget-border = #f0f0f0
+color-widget-background = #fff
+color-widget-border = #fff
 color-footer-background = #051e3b
-color-mobile-nav-background = linear-gradient(315deg, rgba(255,255,255,0) 0%, rgba(38,125,255,0.1000) 100%)
+color-mobile-nav-background = #fff
 color-twitter = #00aced
 color-facebook = #3b5998
 color-pinterest = #cb2027
 color-google = #dd4b39
+
+sidebar-width = 360px
 
 // Fonts
 font-sans = -apple-system, BlinkMacSystemFont,
@@ -37,6 +39,7 @@ logo-size = 40px
 subtitle-size = 16px
 banner-height = 300px
 banner-url = "images/banner.jpg"
+face-url = "images/face.jpg"
 
 sidebar = hexo-config("sidebar")
 
