--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -18,7 +18,7 @@ color-facebook = #3b5998
 color-pinterest = #cb2027
 color-google = #dd4b39
 
-sidebar-width = 360px
+sidebar-width = 20vw
 
 // Fonts
 font-sans = -apple-system, BlinkMacSystemFont,
@@ -64,3 +64,4 @@ columns = main-column + _sidebar-column
 mq-mobile = "screen and (max-width: 479px)"
 mq-tablet = "screen and (min-width: 480px) and (max-width: 767px)"
 mq-normal = "screen and (min-width: 768px)"
+md-page = "screen and (max-width: 800px)"
