--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -62,8 +62,15 @@ body
   transition: 0.2s ease-out
   z-index: 1
   background: color-background
-  .mobile-nav-on &
-    left: mobile-nav-width
+  @media md-page
+    #sidebar
+      position: relative
+      width: 100vw
+      height: auto
+      .widget-wrap
+        display: none
+    .outer
+      margin-left: 0
 
 
 @import "_extend"
