--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1299,6 +1299,8 @@ pre .javascript .function {
   top: 0;
   overflow-y: auto;
   background-color: #fff;
+  -webkit-box-shadow: 1px 2px 3px #ddd;
+  box-shadow: 1px 2px 3px #ddd;
 }
 .widget-wrap {
   margin: 50px 0;
