--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1298,9 +1298,29 @@ pre .javascript .function {
   left: 0;
   top: 0;
   overflow-y: auto;
+  overflow-x: hidden;
   background-color: #fff;
   -webkit-box-shadow: 1px 2px 3px #ddd;
   box-shadow: 1px 2px 3px #ddd;
+  z-index: 9;
+}
+#sidebar::before {
+  content: '';
+  width: 100%;
+  height: 100vh;
+  background-color: #0094ff;
+  position: absolute;
+  right: 0;
+  top: 0;
+  -webkit-transform: rotate(80deg);
+  -moz-transform: rotate(80deg);
+  -ms-transform: rotate(80deg);
+  transform: rotate(80deg);
+  -webkit-transform-origin: right 70px;
+  -moz-transform-origin: right 70px;
+  -ms-transform-origin: right 70px;
+  transform-origin: right 70px;
+  z-index: -1;
 }
 .widget-wrap {
   margin: 50px 0;
@@ -1320,6 +1340,7 @@ pre .javascript .function {
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center;
+  position: relative;
 }
 #user .face .face_img {
   width: 100px;
@@ -1327,6 +1348,34 @@ pre .javascript .function {
   background: url("images/face.jpg") center;
   background-size: cover;
   border-radius: 50%;
+}
+#user .face .face_img:hover {
+  -webkit-animation: sty 1000ms linear 0ms infinite;
+  -moz-animation: sty 1000ms linear 0ms infinite;
+  -ms-animation: sty 1000ms linear 0ms infinite;
+  animation: sty 1000ms linear 0ms infinite;
+}
+#user .face::after {
+  content: '';
+  width: 100vw;
+  height: 4px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  background-color: rgba(0,0,0,0.2);
+  z-index: -1;
+  -webkit-transform: rotate(-10deg);
+  -moz-transform: rotate(-10deg);
+  -ms-transform: rotate(-10deg);
+  transform: rotate(-10deg);
+  -webkit-transform-origin: left top;
+  -moz-transform-origin: left top;
+  -ms-transform-origin: left top;
+  transform-origin: left top;
+  -webkit-transition: width 300ms;
+  -moz-transition: width 300ms;
+  -ms-transition: width 300ms;
+  transition: width 300ms;
 }
 #user .name {
   padding: 20px 0;
@@ -1383,6 +1432,62 @@ pre .javascript .function {
 .widget dl dl {
   margin-left: 15px;
   list-style: disc;
+}
+@-moz-keyframes sty {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+    -moz-transform: translate(0, 0) rotate(0deg);
+    -ms-transform: translate(0, 0) rotate(0deg);
+    transform: translate(0, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(-720deg);
+    -moz-transform: translate(0, 0) rotate(-720deg);
+    -ms-transform: translate(0, 0) rotate(-720deg);
+    transform: translate(0, 0) rotate(-720deg);
+  }
+}
+@-webkit-keyframes sty {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+    -moz-transform: translate(0, 0) rotate(0deg);
+    -ms-transform: translate(0, 0) rotate(0deg);
+    transform: translate(0, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(-720deg);
+    -moz-transform: translate(0, 0) rotate(-720deg);
+    -ms-transform: translate(0, 0) rotate(-720deg);
+    transform: translate(0, 0) rotate(-720deg);
+  }
+}
+@-o-keyframes sty {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+    -moz-transform: translate(0, 0) rotate(0deg);
+    -ms-transform: translate(0, 0) rotate(0deg);
+    transform: translate(0, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(-720deg);
+    -moz-transform: translate(0, 0) rotate(-720deg);
+    -ms-transform: translate(0, 0) rotate(-720deg);
+    transform: translate(0, 0) rotate(-720deg);
+  }
+}
+@keyframes sty {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(0deg);
+    -moz-transform: translate(0, 0) rotate(0deg);
+    -ms-transform: translate(0, 0) rotate(0deg);
+    transform: translate(0, 0) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(-720deg);
+    -moz-transform: translate(0, 0) rotate(-720deg);
+    -ms-transform: translate(0, 0) rotate(-720deg);
+    transform: translate(0, 0) rotate(-720deg);
+  }
 }
 .widget {
   line-height: 1.6em;
