--- a/themes/landscape/layout/_widget/user.ejs
+++ b/themes/landscape/layout/_widget/user.ejs
@@ -5,7 +5,7 @@
             
         </div>
         <div class="name">
-            <span>故明月</span>
+            <span><%= config.title %></span>
         </div>
         <div class="menu-link">
             <% for (var i in theme.menu){ %>
