--- a/themes/landscape/source/css/_partial/sidebar-aside.styl
+++ b/themes/landscape/source/css/_partial/sidebar-aside.styl
@@ -6,22 +6,14 @@
   position:fixed
   left:0
   top:0
-  overflow-y:auto
+  overflow-y: overlay
   overflow-x:hidden 
   background-color:#fff
   box-shadow: 1px 2px 3px #ddd
   z-index 9
-  &::before
-    content: ''
-    width: 100%
-    height: 100vh
-    background-color #0094ff
-    position: absolute
-    right: 0
-    top: 0
-    transform: rotate(80deg)
-    transform-origin: right 70px
-    z-index -1
+  &::-webkit-scrollbar 
+    width: 0
+    height: 0
 
 @keyframes sty {
   0%{
@@ -40,6 +32,17 @@
     display:flex
     justify-content:center
     position relative
+    &::before
+      content: ''
+      width: 200%
+      height: 100vw
+      background-color #0094ff
+      position: absolute
+      left: 50%
+      top: 50%
+      transform: translateX(-50%) rotate(170deg)
+      transform-origin: 50% top
+      z-index -1
     .face_img
       width:100px
       height:100px
