--- a/themes/landscape/source/css/_partial/sidebar.styl
+++ b/themes/landscape/source/css/_partial/sidebar.styl
@@ -25,7 +25,7 @@ else
       padding: 2px 6px
       margin-right: 6px
       position: relative
-      border-radius: 2px
+      border-radius: 255px 15px 225px 15px/15px 225px 15px 255px
       cursor pointer
       &:hover
         transform: rotate(6deg)
@@ -52,7 +52,7 @@ else
       padding: 2px 6px
       margin-right: 6px
       position: relative
-      border-radius: 2px
+      border-radius: 255px 15px 225px 15px/15px 225px 15px 255px
       cursor pointer
       &:hover
         transform: rotate(6deg)
