--- a/themes/landscape/source/css/_extend.styl
+++ b/themes/landscape/source/css/_extend.styl
@@ -13,7 +13,7 @@ $block
   background: #fff
   box-shadow: 1px 2px 3px #ddd
   border: 1px solid color-border
-  border-radius: 3px
+  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px
 
 $base-style
   h1
