--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -5,11 +5,11 @@ vendor-prefixes = webkit moz ms official
 // Colors
 color-default = #071D3C
 color-grey = #212B42
-color-border = #ddd
+color-border = #f0f0f0
 color-link = #0094ff
-color-background = #f8f8fa
+color-background = #f5f5f5
 color-sidebar-text = #fff
-color-widget-background = #fff
+color-widget-background = #f5f5f5
 color-widget-border = #fff
 color-footer-background = #051e3b
 color-mobile-nav-background = #fff
@@ -17,7 +17,9 @@ color-twitter = #00aced
 color-facebook = #3b5998
 color-pinterest = #cb2027
 color-google = #dd4b39
+color-scrollbar = #b5bbc4
 
+//width
 sidebar-width = 20vw
 
 // Fonts
@@ -44,11 +46,12 @@ face-url = "images/face.jpg"
 sidebar = hexo-config("sidebar")
 
 // Layout
-block-margin = 50px
+block-margin = 20px
 article-padding = 20px
 mobile-nav-width = 280px
 main-column = 9
 sidebar-column = 3
+
 
 if sidebar and sidebar isnt bottom
   _sidebar-column = sidebar-column
