--- a/themes/landscape/source/css/style.styl
+++ b/themes/landscape/source/css/style.styl
@@ -30,6 +30,16 @@ body
   font: font-size font-sans
   -webkit-text-size-adjust: 100%
 
+::-webkit-scrollbar 
+  width: 5px
+  height: 5px
+::-webkit-scrollbar-thumb 
+  background: color-scrollbar
+  border-radius: 10px
+::-webkit-scrollbar-track 
+  background: #0000
+  
+
 .outer
   clearfix()
   margin: 0 0 0 sidebar-width
