--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1310,6 +1310,7 @@ pre .javascript .function {
   top: 0;
   overflow-y: overlay;
   overflow-x: hidden;
+  background: url("/images/xh/散步.gif") no-repeat right bottom;
   background-color: #fff;
   -webkit-box-shadow: 1px 2px 3px #ddd;
   box-shadow: 1px 2px 3px #ddd;
@@ -1540,6 +1541,22 @@ pre .javascript .function {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  position: relative;
+}
+.widget .archive-list:before {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  -webkit-transform: translateY(-15px) translateY(-100%);
+  -moz-transform: translateY(-15px) translateY(-100%);
+  -ms-transform: translateY(-15px) translateY(-100%);
+  transform: translateY(-15px) translateY(-100%);
+  width: 50px;
+  height: 50px;
+  background: url("/images/xh/额.gif") no-repeat;
+  background-size: 100% auto;
+  z-index: -1;
 }
 .widget .archive-list .archive-list-item {
   background-color: #f0f0f0;
@@ -1603,6 +1620,22 @@ pre .javascript .function {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  position: relative;
+}
+.widget .tag-list:before {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  -webkit-transform: translateY(-15px) translateY(-100%);
+  -moz-transform: translateY(-15px) translateY(-100%);
+  -ms-transform: translateY(-15px) translateY(-100%);
+  transform: translateY(-15px) translateY(-100%);
+  width: 50px;
+  height: 50px;
+  background: url("/images/xh/呃.gif") no-repeat;
+  background-size: 100% auto;
+  z-index: -1;
 }
 .widget .tag-list .tag-list-item {
   background-color: #f0f0f0;
