--- a/themes/landscape/source/css/_partial/sidebar-aside.styl
+++ b/themes/landscape/source/css/_partial/sidebar-aside.styl
@@ -7,7 +7,8 @@
   left:0
   top:0
   overflow-y: overlay
-  overflow-x:hidden 
+  overflow-x:hidden
+  background: url('/images/xh/散步.gif') no-repeat right bottom
   background-color:#fff
   box-shadow: 1px 2px 3px #ddd
   z-index 9
