--- a/themes/landscape/source/css/_partial/sidebar-aside.styl
+++ b/themes/landscape/source/css/_partial/sidebar-aside.styl
@@ -8,7 +8,6 @@
   top:0
   overflow-y: overlay
   overflow-x:hidden
-  background: url('/images/xh/散步.gif') no-repeat right bottom
   background-color:#fff
   box-shadow: 1px 2px 3px #ddd
   z-index 9
@@ -48,7 +47,7 @@
       width:100px
       height:100px
       background: url(face-url) center
-      background-size:cover
+      background-size:134% auto
       border-radius:50%
       &:hover
         animation: sty 1000ms linear 0ms infinite
