--- a/source/404/index.css
+++ b/source/404/index.css
@@ -10,9 +10,10 @@
     align-items: center;
     padding: 0;
     margin: 0;
+    background-color: #333333;
 }
 a{
     font-size: 30vw;
     text-decoration: none;
-    color: #000;
+    color: #cccccc;
 }
