--- a/public/css/main.css
+++ b/public/css/main.css
@@ -976,13 +976,13 @@ pre code {
   border-bottom-color: transparent;
   border-left-color: #ddd;
   border-right-color: #ddd;
-  border-top-color: #fc6423;
+  border-top-color: #a8d41f;
 }
 @media (max-width: 413px) {
   .post-body .tabs ul.nav-tabs li.tab.active,
   .tabs-comment ul.nav-tabs li.tab.active {
     border-bottom-color: #ddd;
-    border-left-color: #fc6423;
+    border-left-color: #a8d41f;
     border-right-color: #ddd;
     border-top-color: #ddd;
   }
@@ -1319,15 +1319,15 @@ header.header {
 }
 .sidebar .sidebar-button button {
   background: transparent;
-  color: #fc6423;
+  color: #a8d41f;
   cursor: pointer;
   line-height: 2;
   padding: 0 15px;
-  border: 1px solid #fc6423;
+  border: 1px solid #a8d41f;
   border-radius: 4px;
 }
 .sidebar .sidebar-button button:hover {
-  background: #fc6423;
+  background: #a8d41f;
   color: #fff;
 }
 .sidebar .sidebar-button button .fa,
@@ -1391,16 +1391,16 @@ header.header {
   margin-left: 10px;
 }
 .sidebar-nav li:hover {
-  color: #fc6423;
+  color: #a8d41f;
 }
 .sidebar-toc-active .sidebar-nav-toc,
 .sidebar-overview-active .sidebar-nav-overview {
-  border-bottom-color: #fc6423;
-  color: #fc6423;
+  border-bottom-color: #a8d41f;
+  color: #a8d41f;
 }
 .sidebar-toc-active .sidebar-nav-toc:hover,
 .sidebar-overview-active .sidebar-nav-overview:hover {
-  color: #fc6423;
+  color: #a8d41f;
 }
 .sidebar-panel-container {
   flex: 1;
@@ -1444,7 +1444,7 @@ header.header {
   }
 }
 .sidebar-toggle:hover .toggle-line {
-  background: #fc6423;
+  background: #a8d41f;
 }
 @media (any-hover: hover) {
   body:not(.sidebar-active) .sidebar-toggle:hover .toggle-line:first-child {
@@ -1505,14 +1505,14 @@ header.header {
   display: block;
 }
 .post-toc .nav .active > a {
-  border-bottom-color: #fc6423;
-  color: #fc6423;
+  border-bottom-color: #a8d41f;
+  color: #a8d41f;
 }
 .post-toc .nav .active-current > a {
-  color: #fc6423;
+  color: #a8d41f;
 }
 .post-toc .nav .active-current > a:hover {
-  color: #fc6423;
+  color: #a8d41f;
 }
 .site-state {
   display: flex;
@@ -1691,7 +1691,7 @@ header.header {
   }
 }
 .back-to-top:hover {
-  color: #fc6423;
+  color: #a8d41f;
 }
 .back-to-top.back-to-top-on {
   bottom: 30px;
@@ -2135,18 +2135,18 @@ header.header {
 }
 .reward-container button {
   background: transparent;
-  color: #fc6423;
+  color: #a8d41f;
   cursor: pointer;
   line-height: 2;
   padding: 0 15px;
-  border: 2px solid #fc6423;
+  border: 2px solid #a8d41f;
   border-radius: 2px;
   outline: 0;
   transition: all 0.2s ease-in-out;
   vertical-align: text-top;
 }
 .reward-container button:hover {
-  background: #fc6423;
+  background: #a8d41f;
   color: #fff;
 }
 .post-reward {
@@ -2607,14 +2607,14 @@ ul.breadcrumb li:last-child {
 }
 .sub-menu .menu-item a:hover {
   background: transparent;
-  color: #fc6423;
+  color: #a8d41f;
 }
 .sub-menu .menu-item-active {
-  border-bottom-color: #fc6423;
-  color: #fc6423;
+  border-bottom-color: #a8d41f;
+  color: #a8d41f;
 }
 .sub-menu .menu-item-active:hover {
-  border-bottom-color: #fc6423;
+  border-bottom-color: #a8d41f;
 }
 .sidebar {
   margin-top: 12px;
@@ -2648,14 +2648,14 @@ ul.breadcrumb li:last-child {
 }
 .sidebar .sidebar-button button {
   border: 0;
-  color: #fc6423;
+  color: #a8d41f;
   display: block;
   width: 100%;
 }
 .sidebar .sidebar-button button:hover {
   background: none;
   border: 0;
-  color: #e34603;
+  color: #86aa19;
 }
 .links-of-author {
   display: flex;
