--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -19,7 +19,8 @@ $red          = #ff2a2a;
 $blue-bright  = #87daff;
 $blue         = #0684bd;
 $blue-deep    = #262a30;
-$orange       = #fc6423;
+// $orange       = #fc6423;
+$orange       = #a8d41f;
 
 
 // Transition
